Updated hawtio console